testsuite/tests/rename/should_fail/RnStupidThetaInGadt.hs
{-# LANGUAGE DatatypeContexts #-}
module RnStupidThetaInGadt where


data (Eq a) => Foo a where
  MkFoo :: Int
