testsuite/tests/rename/should_fail/RnStupidThetaInGadt.stderr

RnStupidThetaInGadt.hs:1:14: warning: [GHC-53692] [-Wdeprecated-flags (in -Wdefault)]
    -XDatatypeContexts is deprecated: It was widely considered a misfeature, and has been removed from the Haskell language.

RnStupidThetaInGadt.hs:5:1: error: [GHC-18403]
    No context is allowed on a GADT-style data declaration
    (You can put a context on each constructor, though.)
